--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
 		"enable": false,
 		"ignoreCommand": []
 	},
-	"adminBot": [""],
+	"adminBot": ["61558382764056"],
 	"whiteListMode": {
 		"enable": false,
 		"whiteListIds": [],
